force-app/main/default/objects/Menu_Item__c/Menu_Item__c.object-meta.xml
<CustomObject>
    <description>The Menu Item object represents an individual food or beverage item on a restaurant menu. Linked to its Restaurant parent, it tracks category, price, and availability status. Commonly used for menu browsing, order placement, and availability management.</description>
    <label>Menu Item</label>
    <nameField>
        <label>Menu Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Menu Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>