force-app/main/default/objects/Menu_Item__c/fields/Availability__c.field-meta.xml
<CustomField>
    <fullName>Availability__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether this menu item is currently available for ordering. Checked means available; unchecked means unavailable.</description>
    <label>Availability</label>
    <type>Checkbox</type>
</CustomField>