force-app/main/default/objects/Menu_Item__c/listViews/All_Menu_Items.listView-meta.xml
<ListView>
    <fullName>All_Menu_Items</fullName>
    <columns>NAME</columns>
    <columns>Restaurant__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Menu Items</label>
</ListView>